styled h1, body, & button

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     <main>
         <div class="search">
             <input type="text" class="search-bar" placeholder="Search">
-            <button>Search</button>
+            <br>
+            <button class="button">Search</button>
         </div>
     <div class="weather-loading">
-        <h1 class="city">Weather in Fond du Lac</h1>
+        <h2 class="city">Weather in Fond du Lac</h2>
         <h2 class="temp">51°F</h2>
         <div class="flex">
             <img src="https://openweathermap.org/img/wn/02d.png" alt="current weather icon" class="icon">
