--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <!-- Font Awesome Script -->
     <script src="https://kit.fontawesome.com/f48d669312.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="cards.css" />
     <!-- Custom Styles -->
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -19,23 +20,70 @@
             <h1>Your Weather Dashboard</h1>
         </section>
     </header>
-    <main>
+    <!-- where the user can search for the city & it stores the cities they've already searched -->
+    <section class="search">
         <div class="search">
             <input type="text" class="search-bar" placeholder="Search">
             <br>
             <button class="button">Search</button>
+            <p id="citySearched"></p>
         </div>
-    <div class="weather-loading">
-        <h2 class="city">Weather in Fond du Lac</h2>
-        <h2 class="temp">51°F</h2>
-        <div class="flex">
-            <img src="https://openweathermap.org/img/wn/02d.png" alt="current weather icon" class="icon">
-        <div class="dsecription">Partly Sunny</div>
+    </section>
+    <!-- where the user can see the current weather info for the city they searched -->
+    <section class="current-weather-info">
+        <div class="container">
+            <h2 class="weather-city" class="date">Weather in </h2>
+            <h3 class="temp">Temperature: °F</h3>
+            <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
+            <h3 class="description">Current Conditions: </h3>
+            </div>
+            <h3 class="humidity">Humidity: %</h3>
+            <h3 class="wind">Wind speed: MPH</h3>
         </div>
-        <div class="humidity">75%</div>
-        <div class="wind">Wind Speed: 6.2 MPH</div>
-    </div>
-    </main> 
+    </section>
+    <!-- where the user can see the upcoming 5 days of weather for the city they searched -->
+    <section class="5-day-weather">
+        <div class="card">
+        <div class="container">
+            <h3 class="date">Day 1</h3>
+                <h4 class="temp">Temperature: °F</h4>
+                <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
+                <h4 class="description">Forecast Conditions: </h4>
+                </div>
+                <h4 class="humidity">Humidity: %</h4>
+                <h4 class="wind">Wind speed: MPH</h4>
+            <h3 class="date">Day 2</h3>
+                 <h4 class="temp">Temperature: °F</h4>
+                <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
+                <h4 class="description">Forecast Conditions: </h4>
+                </div>
+                <h4 class="humidity">Humidity: %</h4>
+                <h4 class="wind">Wind speed: MPH</h4>
+            <h3 class="date">Day 3</h3>
+                <h4 class="temp">Temperature: °F</h4>
+                <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
+                <h4 class="description">Forecast Conditions: </h4>
+                </div>
+                <h4 class="humidity">Humidity: %</h4>
+                <h4 class="wind">Wind speed: MPH</h4>
+            <h3 class="date">Day 4</h3>
+                <h4 class="temp">Temperature: °F</h4>
+                <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
+                <h4 class="description">Forecast Conditions: </h4>
+                </div>
+                <h4 class="humidity">Humidity: %</h4>
+                <h4 class="wind">Wind speed: MPH</h4>
+            <h3 class="date">Day 5</h3>
+                <h4 class="temp">Temperature: °F</h4>
+                <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
+                <h4 class="description">Forecast Conditions: </h4>
+                </div>
+                <h4 class="humidity">Humidity: %</h4>
+                <h4 class="wind">Wind speed: MPH</h4>
+        </div>
+        </div>
+
+    </section>
 <!-- Custom Script -->
 <script src="script.js"></script>
 </body>
