--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <section>
+        <section class="header-card">
             <h1>Your Weather Dashboard</h1>
         </section>
     </header>
@@ -31,59 +31,18 @@
     </section>
     <!-- where the user can see the current weather info for the city they searched -->
     <section class="current-weather-info">
-        <div class="container">
-            <h2 class="weather-city" class="date">Weather in </h2>
-            <h3 class="temp">Temperature: °F</h3>
-            <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
-            <h3 class="description">Current Conditions: </h3>
+        <div class="container" >
+            <div class="card">
+                <h2 class="weather-city" class="date">Weather in </h2>
+                <h3 class="temp">Temperature: °F</h3>
+                <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
+                <h3 class="description">Current Conditions: </h3>
+                <h3 class="humidity">Humidity: %</h3>
+                <h3 class="wind">Wind speed: MPH</h3>
+                </div>
             </div>
-            <h3 class="humidity">Humidity: %</h3>
-            <h3 class="wind">Wind speed: MPH</h3>
-        </div>
     </section>
     <!-- where the user can see the upcoming 5 days of weather for the city they searched -->
-    <section class="5-day-weather">
-        <div class="card">
-        <div class="container">
-            <h3 class="date">Day 1</h3>
-                <h4 class="temp">Temperature: °F</h4>
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
-                <h4 class="description">Forecast Conditions: </h4>
-                </div>
-                <h4 class="humidity">Humidity: %</h4>
-                <h4 class="wind">Wind speed: MPH</h4>
-            <h3 class="date">Day 2</h3>
-                 <h4 class="temp">Temperature: °F</h4>
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
-                <h4 class="description">Forecast Conditions: </h4>
-                </div>
-                <h4 class="humidity">Humidity: %</h4>
-                <h4 class="wind">Wind speed: MPH</h4>
-            <h3 class="date">Day 3</h3>
-                <h4 class="temp">Temperature: °F</h4>
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
-                <h4 class="description">Forecast Conditions: </h4>
-                </div>
-                <h4 class="humidity">Humidity: %</h4>
-                <h4 class="wind">Wind speed: MPH</h4>
-            <h3 class="date">Day 4</h3>
-                <h4 class="temp">Temperature: °F</h4>
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
-                <h4 class="description">Forecast Conditions: </h4>
-                </div>
-                <h4 class="humidity">Humidity: %</h4>
-                <h4 class="wind">Wind speed: MPH</h4>
-            <h3 class="date">Day 5</h3>
-                <h4 class="temp">Temperature: °F</h4>
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
-                <h4 class="description">Forecast Conditions: </h4>
-                </div>
-                <h4 class="humidity">Humidity: %</h4>
-                <h4 class="wind">Wind speed: MPH</h4>
-        </div>
-        </div>
-
-    </section>
 <!-- Custom Script -->
 <script src="script.js"></script>
 </body>
