pseudo code for JS, started variables

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <section class="current-weather-info">
         <div class="container" >
             <div class="card">
-                <h2 class="weather-city" class="date">Weather in </h2>
-                <h3 class="temp">Temperature: °F</h3>
+                <h2 class="city">Weather in </h2>
                 <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
                 <h3 class="description">Current Conditions: </h3>
+                <h3 class="temp">Temperature: °F</h3>
                 <h3 class="humidity">Humidity: %</h3>
                 <h3 class="wind">Wind speed: MPH</h3>
                 </div>
