--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             <p id="citySearched"></p>
         </div>
     </section>
+    <br>
     <!-- where the user can see the current weather info for the city they searched -->
     <section class="current-weather-info">
         <div class="container" >
-            <div class="card">
+            <div class="card current-weather-info">
                 <h2 class="city">Weather in </h2>
                 <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
                 <h3 class="description">Current Conditions: </h3>
@@ -40,6 +41,17 @@
             </div>
     </section>
     <!-- where the user can see the upcoming 5 days of weather for the city they searched -->
+    <section class="upcoming-weather-info">
+        <div class="container">
+            <div class="card">
+                <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
+                <h3 class="description">Forecast: </h3>
+                <h3 class="temp">Temperature: °F</h3>
+                <h3 class="humidity">Humidity: %</h3>
+                <h3 class="wind">Wind speed: MPH</h3>
+            </div>
+        </div>
+    </section>
 <!-- Custom Script -->
 <script src="script.js"></script>
 </body>
