worked on functionality in JS

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         </section>
     </header>
     <!-- where the user can search for the city & it stores the cities they've already searched -->
+   
     <section class="search">
-        <div class="search">
+        <form class="search">
             <input type="text" class="search-bar" placeholder="Search">
             <br>
-            <button class="button">Search</button>
+            <button class="button" id="search-btn">Search</button>
             <p id="citySearched"></p>
-        </div>
+        </form>
     </section>
     <br>
     <!-- where the user can see the current weather info for the city they searched -->
