--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
             </div>
         </div>
     </section>
+<!-- Day JS -->
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 <!-- Custom Script -->
 <script src="script.js"></script>
 </body>
