created render weather function

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         </section>
     </header>
     <!-- where the user can search for the city & it stores the cities they've already searched -->
-   
     <section class="search">
         <form class="search">
             <input type="text" class="search-bar" placeholder="Search">
@@ -32,10 +31,10 @@
     <section class="current-weather-info">
         <div class="container" >
             <div class="card current-weather-info">
-                <h2 class="city">Weather in </h2>
+                <h2>Weather in <span class="weatherCity"></span> </h2>
                 <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
                 <h3 class="description">Current Conditions: </h3>
-                <h3 class="temp">Temperature: °F</h3>
+                <h3>Temperature: <span class="temp"></span> °F</h3>
                 <h3 class="humidity">Humidity: %</h3>
                 <h3 class="wind">Wind speed: MPH</h3>
                 </div>
