finished renderWeatherData for current weather

--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
     <section class="current-weather-info">
         <div class="container" >
             <div class="card current-weather-info">
-                <h2>Weather in <span class="weatherCity"></span> </h2>
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="current-weather-icon" class="icon">
-                <h3 class="description">Current Conditions: </h3>
+                <h2>Weather in <span class="weatherCity"></span> 
                 <h3>Temperature: <span class="temp"></span> °F</h3>
-                <h3 class="humidity">Humidity: %</h3>
-                <h3 class="wind">Wind speed: MPH</h3>
+                <h3>Humidity: <span class="humidity"></span> %</h3>
+                <h3>Wind speed: <span class="wind"></span> MPH</h3>
                 </div>
             </div>
     </section>
