text transfrom on CSS, finished render weather

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container" >
             <div class="card current-weather-info">
                 <h2>Weather in <span class="weatherCity"></span>
-                <h3>Current Conditions<span class="conditions"></span></h3>
+                <h3>Current Conditions: <span class="conditions"></span></h3>
                 <h3>Temperature: <span class="temp"></span> °F</h3>
                 <h3>Humidity: <span class="humidity"></span> %</h3>
                 <h3>Wind speed: <span class="wind"></span> MPH</h3>
