added 5 days cards to HTML

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <section class="current-weather-info">
         <div class="container" >
             <div class="card current-weather-info">
-                <h2>Weather in <span class="weatherCity"></span>
+                <h2>Weather in <span class="weatherCity"></span></h2>
+                <img src="https://openweathermap.org/img/wn/02d.png" alt="weather-icon" class="icon">
                 <h3>Current Conditions: <span class="conditions"></span></h3>
                 <h3>Temperature: <span class="temp"></span> °F</h3>
                 <h3>Humidity: <span class="humidity"></span> %</h3>
@@ -43,6 +44,41 @@
     <section class="upcoming-weather-info">
         <div class="container">
             <div class="card">
+                <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
+                <h3 class="description">Forecast: </h3>
+                <h3 class="temp">Temperature: °F</h3>
+                <h3 class="humidity">Humidity: %</h3>
+                <h3 class="wind">Wind speed: MPH</h3>
+            </div>
+            <div class="card-1">
+                <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
+                <h3 class="description">Forecast: </h3>
+                <h3 class="temp">Temperature: °F</h3>
+                <h3 class="humidity">Humidity: %</h3>
+                <h3 class="wind">Wind speed: MPH</h3>
+            </div>
+            <div class="card-2">
+                <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
+                <h3 class="description">Forecast: </h3>
+                <h3 class="temp">Temperature: °F</h3>
+                <h3 class="humidity">Humidity: %</h3>
+                <h3 class="wind">Wind speed: MPH</h3>
+            </div>
+            <div class="card-3">
+                <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
+                <h3 class="description">Forecast: </h3>
+                <h3 class="temp">Temperature: °F</h3>
+                <h3 class="humidity">Humidity: %</h3>
+                <h3 class="wind">Wind speed: MPH</h3>
+            </div>
+            <div class="card-4">
+                <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
+                <h3 class="description">Forecast: </h3>
+                <h3 class="temp">Temperature: °F</h3>
+                <h3 class="humidity">Humidity: %</h3>
+                <h3 class="wind">Wind speed: MPH</h3>
+            </div>
+            <div class="card-5">
                 <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
                 <h3 class="description">Forecast: </h3>
                 <h3 class="temp">Temperature: °F</h3>
