--- a/index.html
+++ b/index.html
@@ -29,62 +29,73 @@
     <br>
     <!-- where the user can see the current weather info for the city they searched -->
     <section class="current-weather-info">
-        <div class="container" >
-            <div class="card current-weather-info">
-                <h2>Weather in <span class="weatherCity"></span></h2>
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="weather-icon" class="icon">
-                <h3>Current Conditions: <span class="conditions"></span></h3>
-                <h3>Temperature: <span class="temp"></span> °F</h3>
-                <h3>Humidity: <span class="humidity"></span> %</h3>
-                <h3>Wind speed: <span class="wind"></span> MPH</h3>
+        <div class="container-current" >
+            <div class="row">
+                <div class="column">
+                        <h2>Weather in <span class="weatherCity"></span></h2>
+                        <img src="https://openweathermap.org/img/wn/02d.png" alt="weather-icon" class="icon">
+                        <h3>Current Conditions: <span class="conditions"></span></h3>
+                        <h3>Temperature: <span class="temp"></span> °F</h3>
+                        <h3>Humidity: <span class="humidity"></span> %</h3>
+                        <h3>Wind speed: <span class="wind"></span> MPH</h3>
+                    </div>
                 </div>
             </div>
+        </div>
     </section>
     <!-- where the user can see the upcoming 5 days of weather for the city they searched -->
-    <section class="upcoming-weather-info">
-        <div class="container">
-            <div class="card">
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
-                <h3 class="description">Forecast: </h3>
-                <h3 class="temp">Temperature: °F</h3>
-                <h3 class="humidity">Humidity: %</h3>
-                <h3 class="wind">Wind speed: MPH</h3>
+    <!-- <section class="upcoming-weather-info"> -->
+        <div class="container-forecast">
+            <div class="row">
+                <div class="column">
+                    <div class="forecast-1">
+                        <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
+                        <h3 class="description">Forecast: </h3>
+                        <h3 class="temp">Temperature: °F</h3>
+                        <h3 class="humidity">Humidity: %</h3>
+                        <h3 class="wind">Wind speed: MPH</h3>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="forecast-2">
+                        <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
+                        <h3 class="description">Forecast: </h3>
+                        <h3 class="temp">Temperature: °F</h3>
+                        <h3 class="humidity">Humidity: %</h3>
+                        <h3 class="wind">Wind speed: MPH</h3>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="forecast-3">
+                        <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
+                        <h3 class="description">Forecast: </h3>
+                        <h3 class="temp">Temperature: °F</h3>
+                        <h3 class="humidity">Humidity: %</h3>
+                        <h3 class="wind">Wind speed: MPH</h3>
+                    </div>
+                </div>
             </div>
-            <div class="card-1">
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
-                <h3 class="description">Forecast: </h3>
-                <h3 class="temp">Temperature: °F</h3>
-                <h3 class="humidity">Humidity: %</h3>
-                <h3 class="wind">Wind speed: MPH</h3>
+            <div class="row">
+                <div class="column">
+                        <div class="forecast-4">
+                            <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
+                            <h3 class="description">Forecast: </h3>
+                            <h3 class="temp">Temperature: °F</h3>
+                            <h3 class="humidity">Humidity: %</h3>
+                            <h3 class="wind">Wind speed: MPH</h3>
+                        </div>
+                </div>
+                <div class="column">
+                    <div class="forecast-5">
+                        <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
+                        <h3 class="description">Forecast: </h3>
+                        <h3 class="temp">Temperature: °F</h3>
+                        <h3 class="humidity">Humidity: %</h3>
+                        <h3 class="wind">Wind speed: MPH</h3>
+                    </div>
+                </div>
             </div>
-            <div class="card-2">
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
-                <h3 class="description">Forecast: </h3>
-                <h3 class="temp">Temperature: °F</h3>
-                <h3 class="humidity">Humidity: %</h3>
-                <h3 class="wind">Wind speed: MPH</h3>
-            </div>
-            <div class="card-3">
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
-                <h3 class="description">Forecast: </h3>
-                <h3 class="temp">Temperature: °F</h3>
-                <h3 class="humidity">Humidity: %</h3>
-                <h3 class="wind">Wind speed: MPH</h3>
-            </div>
-            <div class="card-4">
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
-                <h3 class="description">Forecast: </h3>
-                <h3 class="temp">Temperature: °F</h3>
-                <h3 class="humidity">Humidity: %</h3>
-                <h3 class="wind">Wind speed: MPH</h3>
-            </div>
-            <div class="card-5">
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
-                <h3 class="description">Forecast: </h3>
-                <h3 class="temp">Temperature: °F</h3>
-                <h3 class="humidity">Humidity: %</h3>
-                <h3 class="wind">Wind speed: MPH</h3>
-            </div>
+           
         </div>
     </section>
 <!-- Day JS -->
