added icons to header; fixed button width

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <section class="header-card">
-            <h1>Your Weather Dashboard</h1>
+            <h1> 🌤️ Your Weather Dashboard 🌧️ </h1>
         </section>
     </header>
     <!-- where the user can search for the city & it stores the cities they've already searched -->
