build generateForecast in JS; fixed icon issue

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <div class="row">
                 <div class="column">
                         <h2>Weather in <span class="weatherCity"></span></h2>
-                        <img src="https://openweathermap.org/img/wn/02d.png" alt="weather-icon" class="icon">
-                        <h3>Current Conditions: <span class="conditions"></span></h3>
-                        <h3>Temperature: <span class="temp"></span> °F</h3>
-                        <h3>Humidity: <span class="humidity"></span> %</h3>
-                        <h3>Wind speed: <span class="wind"></span> MPH</h3>
+                        <img src="https://openweathermap.org/img/wn/02d.png" alt="weather-icon" class="current-icon">
+                        <h3>Current Conditions: <span class="current-conditions"></span></h3>
+                        <h3>Temperature: <span class="current-temp"></span> °F</h3>
+                        <h3>Humidity: <span class="current-humidity"></span> %</h3>
+                        <h3>Wind speed: <span class="current-wind"></span> MPH</h3>
                     </div>
                 </div>
             </div>
@@ -48,7 +48,7 @@
         <div class="container-forecast">
             <div class="row">
                 <div class="column">
-                    <div class="forecast-1">
+                    <div id="forecast-0">
                         <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
                         <h3 class="description">Forecast: </h3>
                         <h3 class="temp">Temperature: °F</h3>
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="column">
-                    <div class="forecast-2">
+                    <div id="forecast-1">
                         <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
                         <h3 class="description">Forecast: </h3>
                         <h3 class="temp">Temperature: °F</h3>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="column">
-                    <div class="forecast-3">
+                    <div id="forecast-2">
                         <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
                         <h3 class="description">Forecast: </h3>
                         <h3 class="temp">Temperature: °F</h3>
@@ -77,7 +77,7 @@
             </div>
             <div class="row">
                 <div class="column">
-                        <div class="forecast-4">
+                        <div id="forecast-3">
                             <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
                             <h3 class="description">Forecast: </h3>
                             <h3 class="temp">Temperature: °F</h3>
@@ -86,7 +86,7 @@
                         </div>
                 </div>
                 <div class="column">
-                    <div class="forecast-5">
+                    <div id="forecast-4">
                         <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
                         <h3 class="description">Forecast: </h3>
                         <h3 class="temp">Temperature: °F</h3>
