added 5 day header; adjusted background cover

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     </section>
     <!-- where the user can see the upcoming 5 days of weather for the city they searched -->
     <!-- <section class="upcoming-weather-info"> -->
+    <section class="forecast-header">
+        <h2> 🌤️ Five Day Forecast 🌧️ </h2>
+    </section>
         <div class="container-forecast">
             <div class="row">
                 <div class="column">
@@ -88,7 +91,7 @@
                 <div class="column">
                     <div id="forecast-4">
                         <img src="https://openweathermap.org/img/wn/02d.png" alt="future-weather-icon" class="icon">
-                        <h3 class="description">Forecast: </h3>
+                        <h3 class="description"> Forecast: </h3>
                         <h3 class="temp">Temperature: °F</h3>
                         <h3 class="humidity">Humidity: %</h3>
                         <h3 class="wind">Wind speed: MPH</h3>
